--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -7,7 +7,35 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@UNPUBLISHED{MullerKoperaMarrasEtAl15,
+  author = {Andreas M{\"{u}}ller and Michal A. Kopera and Simone Marras and Lucas
+	C. Wilcox and Tobin Isaac and Francis X. Giraldo},
+  title = {Strong Scaling for Numerical Weather Prediction at Petascale with
+	the Atmospheric Model {NUMA}},
+  note = {http://arxiv.org/abs/1511.01561},
+  year = {2015},
+  archiveprefix = {arXiv},
+  bibsource = {dblp computer science bibliography, http://dblp.org},
+  biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/MullerKMWIG15},
+  eprint = {1511.01561},
+  owner = {cbins},
+  primaryclass = {cs.DC},
+  timestamp = {Tue, 01 Dec 2015 19:22:34 +0100},
+  url = {http://arxiv.org/abs/1511.01561}
+}
 
+@INPROCEEDINGS{RudiMalossiIsaacEtAl15,
+  author = {Rudi, Johann and Malossi, A Cristiano I and Isaac, Tobin and Stadler,
+	Georg and Gurnis, Michael and Staar, Peter WJ and Ineichen, Yves
+	and Bekas, Costas and Curioni, Alessandro and Ghattas, Omar},
+  title = {An extreme-scale implicit solver for complex {PDEs}: highly heterogeneous
+	flow in earth's mantle},
+  booktitle = {Proceedings of the International Conference for High Performance
+	Computing, Networking, Storage and Analysis},
+  year = {2015},
+  pages = {5},
+  organization = {ACM}
+}
 
 @misc{p4est-github,
 	Author = {C. Burstedde},
