first revision submitted to JCP.

--- a/paper/peer-reviews/response_letter.tex
+++ b/paper/peer-reviews/response_letter.tex
@@ -18,7 +18,7 @@ The first reviewer has suggested to include ``\textit{some basic library codes
 in appendix, each matching its level set algorithm}''. Indeed it is important
 for the scientific community to share knowledge and facilitate ways for
 reproducing scientific work for others. In the case of computational science,
-unfortunately, this is a very daunting task that is not always possible.  Many
+unfortunately, this is a daunting task that is not always possible.  Many
 scientific codes are highly specialized and are often too technical to be fitted
 into a paper. 
 
@@ -46,7 +46,7 @@ using a new language that this referee is not aware of?).}''
 
 Our library is coded in `\texttt{C++}' (with a mix of little `\texttt{C}' code).
 We have made adjustments to the to algorithms to make them easier to understand.
-However, we believe it is best not to directly use a `\texttt{c++}' syntax to
+However, we believe it is best not to directly use a `\texttt{C++}' syntax to
 keep the pseudo-code language-agnostic and accessible to all readers.
 
 \vspace{.5cm}
@@ -54,7 +54,7 @@ keep the pseudo-code language-agnostic and accessible to all readers.
 \item ``\textit{In Algorithm 2, what is the definition of “rank”? “owner’s
   rank”? “mpirank”? “st”?}''
 
-There were multiple references to the ``\textit{rank}'' in the pseudo-code that 
+There were multiple references to ``\textit{rank}'' in the pseudo-code that 
 would have caused confusion. We have made things clear by explicitly referring 
 to ``\textit{owners\_rank}'' and ``\textit{mpirank}''. Also in the previous
 pseudo-code ``\textit{st}'' was meant to indicate ``\texttt{MPI\_STATUS}''. Again
