--- a/paper/tex/applications.tex
+++ b/paper/tex/applications.tex
@@ -106,28 +106,28 @@ The simulation was ran on $256$ MPI processes for $6$ hours and $30$ minutes, re
 \begin{figure}[ht!]
 \begin{center}
 \subfigure{
-\includegraphics[width=.24\textwidth]{stefan/nb2_iter19.png}
-\includegraphics[width=.24\textwidth]{stefan/nb2_iter39.png}
-\includegraphics[width=.24\textwidth]{stefan/nb2_iter59.png}
-\includegraphics[width=.24\textwidth]{stefan/nb2_iter79.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb2_iter19.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb2_iter39.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb2_iter59.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb2_iter79.png}
 }
 \subfigure{
-\includegraphics[width=.24\textwidth]{stefan/nb5_iter19.png}
-\includegraphics[width=.24\textwidth]{stefan/nb5_iter39.png}
-\includegraphics[width=.24\textwidth]{stefan/nb5_iter59.png}
-\includegraphics[width=.24\textwidth]{stefan/nb5_iter79.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb5_iter19.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb5_iter39.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb5_iter59.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb5_iter79.png}
 }
 \subfigure{
-\includegraphics[width=.24\textwidth]{stefan/nb8_iter19.png}
-\includegraphics[width=.24\textwidth]{stefan/nb8_iter39.png}
-\includegraphics[width=.24\textwidth]{stefan/nb8_iter59.png}
-\includegraphics[width=.24\textwidth]{stefan/nb8_iter79.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb8_iter19.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb8_iter39.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb8_iter59.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb8_iter79.png}
 }
 \subfigure{
-\includegraphics[width=.24\textwidth]{stefan/nb12_iter19.png}
-\includegraphics[width=.24\textwidth]{stefan/nb12_iter39.png}
-\includegraphics[width=.24\textwidth]{stefan/nb12_iter59.png}
-\includegraphics[width=.24\textwidth]{stefan/nb12_iter79.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb12_iter19.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb12_iter39.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb12_iter59.png}
+\includegraphics[width=.24\textwidth]{figures/stefan_nb12_iter79.png}
 }
 \caption{Time evolution of four of the crystals obtained for the Stefan problem simulation. The snapshots represent, from left to right, iterations 96, 196, 296 and 396.} \label{fig:stefan_evolution}
 \end{center}
